--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -2,31 +2,76 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="#6267FE"
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/logo_img"
         android:layout_width="wrap_content"
         android:layout_height="150px"
         android:layout_centerInParent="true"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:paddingHorizontal="50dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ls_logo" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginHorizontal="50dp"
-        android:layout_marginBottom="50dp"
+        android:layout_below="@+id/logo_img"
+        android:layout_alignStart="@id/logo_img"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:gravity="center"
-        android:text="Buy Sell Trade Sneakers &amp; Clothing"
-        android:textAlignment="center"
-        android:textColor="@color/primary_text"
+        android:text="Buy Sell Trade\n Sneakers &amp; Clothing"
+        android:textColor="@color/primary_dark"
         android:textFontWeight="800"
-        android:textSize="32dp" />
+        android:textSize="22dp" />
+
+    <ImageView
+        android:id="@+id/topLeft"
+        android:layout_width="134dp"
+        android:layout_height="190dp"
+        android:scaleType="centerCrop"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/splashtopleft" />
+
+    <ImageView
+        android:id="@+id/middleLeft"
+        android:layout_width="146dp"
+        android:layout_height="204dp"
+        android:layout_below="@+id/topLeft"
+        android:layout_marginTop="-20dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/splashmiddleleft" />
+
+    <ImageView
+        android:id="@+id/bottomLeft"
+        android:layout_width="238dp"
+        android:layout_height="269dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="-70dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="-90dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/splashbottomleft" />
+
+    <ImageView
+        android:id="@+id/topRight"
+        android:layout_width="182dp"
+        android:layout_height="212dp"
+        android:layout_marginTop="100dp"
+        android:layout_alignParentRight="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/splashtopright" />
+    <ImageView
+        android:id="@+id/bottomRight"
+        android:layout_width="162dp"
+        android:layout_height="222dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/splashbottomright" />
 </RelativeLayout>
